# serializer version: 1
# name: TestAirportsCommand.test_airports_snapshot
  '''
         Airports matching 'sri lanka'       
                                             
    IATA   Airport / City                    
   ───────────────────────────────────────── 
    CMB    Colombo Bandaranaike (Sri Lanka)  
                                             
  
  '''
# ---
# name: TestFlexCommand.test_flex_month_snapshot
  '''
  Using cached flex results from 3h ago. Run with --refresh to fetch live prices.
                 Full month view: July 2026 -- all sampled windows                
                                                                                  
    Rank   Depart       Return       True cost    vs Tracked   Airline    Stops   
   ────────────────────────────────────────────────────────────────────────────── 
       1   2026-07-01   2026-07-08        $280   $-520 (-65…   QF        nonst…   
       2   2026-07-08   2026-07-15        $320   $-480 (-60…   VA        nonst…   
       3   2026-07-15   2026-07-22        $360   $-440 (-55…   JQ             1   
                                                                                  
  Watch a cheaper alternative instead? [1-3/n] [1/2/3/n] (n): 
  '''
# ---
# name: TestFlexCommand.test_flex_snapshot
  '''
  Using cached flex results from 3h ago. Run with --refresh to fetch live prices.
                              Flex Windows: BNE → SYD                             
                                                                                  
    Rank   Depart       Return       True cost    vs Tracked   Airline    Stops   
   ────────────────────────────────────────────────────────────────────────────── 
       1   2026-09-17   2026-09-24        $300   $-500 (-62…   QF        nonst…   
       2   2026-09-20   2026-09-27        $350   $-450 (-56…   QF        nonst…   
       3   2026-09-23   2026-09-30        $400   $-400 (-50…   JQ             1   
                                                                                  
  Watch a cheaper alternative instead? [1-3/n] [1/2/3/n] (n): 
  '''
# ---
# name: TestPlanCommand.test_plan_snapshot
  '''
  Note: ANTHROPIC_API_KEY not set. Using structured prompts. (Set this key to 
  enable natural language input like "Sri Lanka in December".)
  Destination (city or country name):   CMB — Colombo Bandaranaike (Sri Lanka)
  Departure month (e.g. dec-2026): Trip length (nights) (7): Date flexibility (±days) (3): 
  Planning trip to: Colombo Bandaranaike (Sri Lanka)
  Searching BNE → CMB for December 2026...
  No results found for December 2026. Check your API key or try a different 
  destination.
  
  '''
# ---
# name: TestSnapshotOutput.test_check_snapshot
  '''
  
  ─────────────────────────── BNE-SYD July  BNE → SYD ────────────────────────────
    Dates: 2026-07-20 → 2026-07-27   Adults: 2   Last updated: 2026-03-03T10:00
  
                                        
     Base fare (adults)          $298   
                                        
     True family cost        $575 AUD   
     30-day average              $598   
     Trend                  $-5.0/day   
                                        
  ╭──────────────────────────────────────────────────────────────────────────────╮
  │   WAIT  70% confident   Regret risk: MEDIUM                                  │
  │                                                                              │
  │   Prices are falling steadily. Wait for a better deal before booking.        │
  │   Market signal: TYPICAL                                                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: TestSnapshotOutput.test_compare_snapshot
  '''
                Trip Comparison — Cost Breakdown              
  ╭────────────────────┬──────────────────┬──────────────────╮
  │                    │      QF  BNE→SYD │      QF  BNE→SYD │
  │                    │       2026-07-20 │       2026-07-20 │
  ├────────────────────┼──────────────────┼──────────────────┤
  │ Base fare/adult    │             $295 │             $295 │
  │ Checked bags       │              $30 │              $30 │
  │                    │                  │                  │
  │ TOTAL FAMILY COST  │         $620 AUD │         $620 AUD │
  │ Recommendation     │             WAIT │             WAIT │
  ╰────────────────────┴──────────────────┴──────────────────╯
  
  '''
# ---
# name: TestSnapshotOutput.test_status_snapshot
  '''
  #1 BNE-SYD July  BNE→SYD  $620  WAIT  (70%)  138d to departure
  
  '''
# ---
